--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "sass": "^1.68.0"
   },
   "devDependencies": {
     "@types/node": "^20",
