--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
-    "react-redux": "^8.1.3",
-    "sass": "^1.68.0"
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -24,6 +23,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
+    "sass": "^1.68.0",
     "typescript": "^5"
   }
 }
