--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.6",
+    "echarts-for-react": "^3.0.2",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
     "react": "^18",
